# tkinter-embedded

./: .gitignore  Makefile  README.md  README.rst  build_tcltk.sh  create_src.sh  fetch_tcltk.sh  pyproject.toml
.github/workflows/: macOS.yml
dev/3.13/: build_tcltk.sh  create_src.sh  fetch_tcltk.sh  source.patch
