[build-system]
requires = ["setuptools>=74.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkinter-embedded"
dynamic = ["version"]
description = "tkinter for Tcl/Tk 9.0"
readme = {file = "README.rst", content-type = "text/x-rst"}
authors = [
    { name="Marc Culler", email="culler@users.noreply.github.com" },
]
maintainers = [
    { name="Marc Culler", email="culler@users.noreply.github.com" },
]
requires-python = ">=3.8"
keywords = ["tkinter", "Tk", "Tcl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Utilities"
]

[[tool.setuptools.ext-modules]]
name = "_tkinter"
sources = ["dynload/_tkinter.c"]
include-dirs = [
"temp/Python-3.13.1/Include/internal",
"Tcl_Headers",
"Tk_Headers",
]
extra-link-args = [
  "src/tkinter_embedded/Tcl.framework/Tcl",
  "src/tkinter_embedded/Tk.framework/Tk",
  "-Wl,-rpath,@loader_path/../tkinter_embedded/Tcl.framework",
  "-Wl,-rpath,@loader_path/../tkinter_embedded/Tk.framework",
  ]

[tool.setuptools.package-data]
tkinter_embedded = [
  "Tcl.framework/**",
  "Tk.framework/**",
]

[project.urls]
"Homepage" = "https://github.com/culler/embedded-tk"
"Bug Tracker" = "https://github.com/culler/embedded-tk/issues"

[tool.setuptools.dynamic]
version = {attr = "tkinter_embedded.version.__version__"}